updated text align issue

--- a/automation/services/mina-bp-stats/leaderboard-ui/web-dev/php/assets/css/custom.css
+++ b/automation/services/mina-bp-stats/leaderboard-ui/web-dev/php/assets/css/custom.css
@@ -269,6 +269,7 @@ th {
     line-height: 64px;
     color: #000000;
     font-family: "Monument Grotesk";
+    text-align: center;
 }
 
 .mina-top-right-button {
